Fixed a crowded header spacing in playlists title

--- a/app/assets/stylesheets/application/playlists.css.scss
+++ b/app/assets/stylesheets/application/playlists.css.scss
@@ -166,6 +166,7 @@ img.cover_200 {
       padding-right: 40px;
       color: $text_color;
       margin: 0;
+      margin-bottom: 4px;
     }
     h3 {
       font-weight: normal;
